fix Mantis #0018852: Vertically align the 'hamburger' menu icon on small screens

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -137,9 +137,6 @@ table.well tr td{padding:10px 20px;padding-right:20px}
 		margin-right: 32px;
 		margin-top: 10px;
 	}
-	#navigation .navbar-toggle{
-		margin-top:14px
-	}
 	.well{padding:7px}
 	/* need this to overwrite sizes of inputs */
 	input.form-control,select.form-control{width:100%; margin-left:0px!important;margin-right:0px!important}
