--- a/less/navbar.less
+++ b/less/navbar.less
@@ -43,9 +43,9 @@
 	#navigation{ right:inherit !important;}
 	
 }
-
 .navbar-toggle {
     display: block;
+	margin-top:14px;
     border: 0;
     &:hover {
     	background: transparent;
